# Zeoprix-AMZ-AD-Analysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start.bat  启动系统.bat
.github/workflows/: test.yml
backend/: config.py  database.py  logging_config.py  main.py  middleware.py
backend/api/: __init__.py  ad_types.py  analysis.py  backups.py  benchmarks.py  campaigns.py  data_manage.py  imports.py  inventory.py  keywords.py  migration.py  notes.py  operation_logs.py  organic_sales.py  placements.py  products.py  reports.py  rules.py  search_terms.py  settings.py  summaries.py
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: migrate_excel.py
tests/: conftest.py  test_ad_type_kpi_fields.py  test_ad_types_api.py  test_analysis_service.py  test_auto_detect_api.py  test_backup_service.py  test_benchmark_service.py  test_budget_service.py  test_bulk_upload_service.py  test_campaigns_pagination.py  test_csv_parser.py  test_csv_type_detector.py  test_data_manage.py  test_date_parser.py  test_formatters.py  test_import_api.py  test_inventory_service.py  test_keyword_service.py  test_kpi_calculator.py  test_log_parser.py  test_notes_pagination.py  test_pdf_report_service.py  test_report_service.py  test_rule_engine.py  test_search_term_service.py  test_search_term_whitelist.py  test_search_terms_pagination.py  test_status_service.py  test_summary_service.py
(+138 files in other folders)
